# chordal_wip

./: .gitignore  LICENSE  README.md  create_dict.py  eda.py  main.py  pyproject.toml  test.py  testground.py  todo
.github/workflows/: python-tests.yaml
bak/: chordcleaner.py
chordal_wip/: chordcanonizer.py  chordcleaner.py  chordcleaner_old.py  chordisolator.py  gui.py  helpers.py  key.py  scales.py  training_data_prep.py
notebooks/: eda.qmd  eda.quarto_ipynb
tests/: test_chordcanonizer.py  test_chordcleaner.py  test_chordcleaner_old.py  test_chordcleanertoken.py  test_chords.py  test_key.py  test_progressions.py  test_rotate_list.py  test_scales.py
